update unit test, dan swagger
